--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@nextui-org/divider": "^2.0.31",
     "@nextui-org/dropdown": "^2.1.29",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.416.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
